--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   </head>
 
   <body>
-    <div id="app"/>
-    <script src="dist/client.min.js"></script>
+    <div id="app"></div>
   </body>
 </html>
